--- a/index.html
+++ b/index.html
@@ -17,10 +17,6 @@
 <body>
 <div class ="topnav">
 
-<!--       <a href="{{url_for('pv')}}" >PICOVOICE</a>-->
-<!--       <a href="{{url_for('pv')}}" >HOME </a>-->
-<!--       <a href="{{url_for('pv')}}" >DOWNLOAD</a>-->
-    <div class = "topnav-left">
         <img id ="icon"src = "./static/picture/icon.png">
 
         <h8>
@@ -28,9 +24,9 @@
         </h8>
     </div>
     <div class="topnav-right">
-         <a class="a" href="{{url_for('home_page')}}" >HOME</a>
-         <a class="a" href="{{url_for('pv')}}" >INSTRUCTION</a>
-         <a class="a" href="{{url_for('ca')}}" >CONTACT US</a>
+         <a class="a" href="https://miniliang.github.io/slidecontroller-website/" >HOME</a>
+         <a class="a" href="https://miniliang.github.io/slidecontroller-instruction/" >INSTRUCTION</a>
+         <a class="a" href="https://miniliang.github.io/slidecontroller-contact/" >CONTACT US</a>
     <button> <a id="b" href = "./static/picture/icon.png" download>DOWNLOAD</a></button>
 
     </div>
