--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 <body>
 <div class ="topnav">
 
+<!--       <a href="{{url_for('pv')}}" >PICOVOICE</a>-->
+<!--       <a href="{{url_for('pv')}}" >HOME </a>-->
+<!--       <a href="{{url_for('pv')}}" >DOWNLOAD</a>-->
+    <div class = "topnav-left">
         <img id ="icon"src = "./static/picture/icon.png">
 
         <h8>
